# NeverEndingStory

./: .gitignore  NeverEndingStory.code-workspace  README.md
backend/: chain_listener.py  pyproject.toml  requirements.txt  video_generator.py
contracts/: 4.5.0  hardhat.config.js  package-lock.json  package.json
contracts/artifacts/@chainlink/contracts/src/v0.8/VRFConsumerBaseV2.sol/: VRFConsumerBaseV2.dbg.json
contracts/artifacts/@chainlink/contracts/src/v0.8/interfaces/VRFCoordinatorV2Interface.sol/: VRFCoordinatorV2Interface.dbg.json
contracts/artifacts/contracts/MockVRFCoordinator.sol/: MockVRFCoordinator.dbg.json  MockVRFCoordinator.json  VRFConsumerBaseV2.json
contracts/artifacts/contracts/MultiPromptStoryVRF.sol/: MultiPromptStory.json
contracts/artifacts/contracts/NeverEndingStory.sol/: MultiPromptStory.dbg.json  MultiPromptStory.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: MockVRFCoordinator.sol  NeverEndingStory.sol  RandomnessConsumer.sol  ReentrantAttacker.sol
contracts/test/: MultiPromptStory.test.js  NeverEndingStory.test.js  NeverEndingStoryExtended.test.js  NeverEndingStoryReentrancy.test.js  helpers.js
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
