[tool.poetry]
name = "never-ending-story-backend"
version = "0.1.0"
description = "Backend service for Never Ending Story"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
web3 = "^6.11.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.9.1"
